--- a/Widget-form2.css
+++ b/Widget-form2.css
@@ -57,7 +57,7 @@
     padding-bottom: 0rem;
   }
   
-  #my-chat-widget .chat-header::after {
+  #my-chat-widget .chat-heading::after {
   content: "";
   position: absolute;
   right: 48px;
