--- a/Widget-form2.css
+++ b/Widget-form2.css
@@ -114,7 +114,7 @@
     width: 40px;
     height: 40px;
     border-radius: 50%;
-    background: url("https://github.com/RickCBA/widget-centered/blob/main/Ellen.jpeg?raw=true") no-repeat center center;
+    background: url("https://github.com/RickCBA/widget-centered/blob/8b12518cc4d3732b69f9b179b4e5973e992dd1fd/Alan%20avatar.jpg?raw=true") no-repeat center center;
     background-size: cover;
   }
   /* User messages */
